@@ -11,7 +11,7 @@
 
     to update all generated files.
 }]
-[vset VERSION 1.1.1]
+[vset VERSION 1.1.3]
 [manpage_begin math::numtheory n [vset VERSION]]
 [keywords {number theory}]
 [keywords prime]
@@ -204,6 +204,24 @@ Estimate the number of primes between tow limits according the modified formula 
 [list_begin arguments]
 [arg_def integer lower in] Lower limit for the primes, should be larger than 0
 [arg_def integer upper in] Upper limit for the primes, should be larger than 0
+[list_end]
+
+[call [cmd math::numtheory::listPrimePairs] [arg lower] [arg upper] [arg step]]
+Return a list of pairs of primes each differing by the given step.
+
+[list_begin arguments]
+[arg_def integer lower in] Lower limit for the primes, should be larger than 0
+[arg_def integer upper in] Upper limit for the primes, should be larger than the lower limit
+[arg_def integer step in] Step by which the primes should differ, defaults to 2
+[list_end]
+
+[call [cmd math::numtheory::listPrimeProgressions] [arg lower] [arg upper] [arg step]]
+Return a list of lists of primes each differing by the given step from the previous one.
+
+[list_begin arguments]
+[arg_def integer lower in] Lower limit for the primes, should be larger than 0
+[arg_def integer upper in] Upper limit for the primes, should be larger than the lower limit
+[arg_def integer step in] Step by which the primes should differ, defaults to 2
 [list_end]
 
 [list_end]
