@@ -17,7 +17,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 package require Tcl 8.5
-package provide math::numtheory 1.1.2
+package provide math::numtheory 1.1.3
 namespace eval ::math::numtheory {
    namespace export isprime
 }
