@@ -25,8 +25,8 @@ package ifneeded math::statistics        1.5.0 [list source [file join $dir stat
 package ifneeded math::linearalgebra     1.1.6 [list source [file join $dir linalg.tcl]]
 package ifneeded math::calculus::symdiff 1.0.1 [list source [file join $dir symdiff.tcl]]
 package ifneeded math::bigfloat          2.0.2 [list source [file join $dir bigfloat2.tcl]]
-package ifneeded math::numtheory         1.1.2 [list source [file join $dir numtheory.tcl]]
-package ifneeded math::decimal           1.0.3 [list source [file join $dir decimal.tcl]]
+package ifneeded math::numtheory         1.1.3 [list source [file join $dir numtheory.tcl]]
+package ifneeded math::decimal           1.0.4 [list source [file join $dir decimal.tcl]]
 package ifneeded math::geometry          1.4.1 [list source [file join $dir geometry.tcl]]
 package ifneeded math::trig              1.0   [list source [file join $dir trig.tcl]]
 package ifneeded math::quasirandom       1.0   [list source [file join $dir quasirandom.tcl]]
