@@ -48,7 +48,20 @@ proc matchLists { expected actual } {
    }
    return $match
 }
+
+proc matchNestedLists { expected actual } {
+   set match 1
+   foreach a $actual e $expected {
+      if { ! [matchLists $a $e] } {
+         set match 0
+         break
+      }
+   }
+   return $match
+}
+
 customMatch equalLists matchLists
+customMatch equalNestedLists matchNestedLists
 
 test first-few-primes-1 "First 10 primes" -match equalLists -body {
     ::math::numtheory::firstNprimes 10
@@ -195,6 +208,23 @@ test number-primes "Exercise prime estimators" -match equalLists -body {
     set estimate3 [::math::numtheory::numberPrimesLegendreModified 1000]
     set result [list [expr {int($estimate1)}] [expr {int($estimate2)}] [expr {int($estimate3)}]]
 } -result {144 169 171}
+
+test list-primes-1 "Pairs of primes - twins" -match equalNestedLists -body {
+    ::math::numtheory::listPrimePairs 3 100
+} -result {{3 5} {5 7} {11 13} {17 19} {29 31} {41 43} {59 61} {71 73}}
+
+test list-primes-2 "Pairs of primes differing by 6 " -match equalNestedLists -body {
+    ::math::numtheory::listPrimePairs 3 100 6
+} -result {{5 11} {7 13} {11 17} {13 19} {17 23} {23 29} {31 37} {37 43} {41 47} {47 53} {53 59} {61 67} {67 73} {73 79} {83 89} {97 103}}
+
+test list-primes-3 "Progressions of primes differing by 2 " -match equalNestedLists -body {
+    ::math::numtheory::listPrimeProgressions 3 100 2
+} -result {{3 5 7} {11 13} {17 19} {29 31} {41 43} {59 61} {71 73}}
+
+test list-primes-4 "Progressions of primes differing by 6 " -match equalNestedLists -body {
+    ::math::numtheory::listPrimeProgressions 3 100 6
+} -result {{5 11 17 23 29} {7 13 19} {31 37 43} {41 47 53 59} {61 67 73 79} {83 89}}
+
 testsuiteCleanup
 ##
 ##
