@@ -1,3 +1,12 @@
+2021-03-14  Arjen Markus <arjenmarkus@users.sourceforge.net>
+	* decimal.tcl: Apply patch for fromstr, version 1.0.4 (ticket d159e101f329682a232aabac36c0ef6640ff8484)
+	* decimal.test: Added test for this ticket
+	* primes.tcl: Added procedures for returning pairs and lists of primes (ticket 0ce5a9fc98f7c752d4dabc0911dccfb513686ad2)
+	* primes.test: Added tests for the new procedures
+	* numtheory.man: Description of the new procedures
+	* numtheory.tcl: Updated version to 1.1.3
+	* pkgIndex.tcl: Updated the version for math::decimal and math::numtheory
+
 2021-03-07  Arjen Markus <arjenmarkus@users.sourceforge.net>
 	* various man files: Require Tcl 8.6 and TclOO
 
